--- a/app/assets/style/_index.scss
+++ b/app/assets/style/_index.scss
@@ -14,6 +14,20 @@ form.bookingSearch {
     max-width: 920px;
     margin-bottom: 4rem;
   }
+
+  .material-icons {
+    position: absolute;
+    top: 50%;
+    left: 1rem;
+    transform: translateY(-50%);
+  }
+  input {
+    height: 3.5rem;
+    padding-left: 3.5rem;
+  }
+  button {
+    height: 3.5rem;
+  }
 }
 
 .nav-cities {
