--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -143,7 +143,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- Swiper JS -->
-    <script src="https://unpkg.com/swiper/js/swiper.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/js/swiper.js"></script>
     <script>
       $(document).ready(function () {
         //initialize swiper when document ready
